--- a/server/package.json
+++ b/server/package.json
@@ -5,18 +5,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cloudinary": "^1.37.3",
+    "cloudinary": "^1.35.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.3.4",
-    "nodemon": "^3.0.1",
-    "openai": "^3.3.0"
+    "mongoose": "^7.0.3",
+    "nodemon": "^2.0.22",
+    "openai": "^3.2.1"
   }
 }
